--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost/mediatek
 spring.datasource.username=root
-spring.datasource.password=lteny72q
+#spring.datasource.password=lteny72q
+spring.datasource.password=Lteny72q!
 spring.jpa.generate-ddl=true
 server.port=9000
 
